--- a/vercel.json
+++ b/vercel.json
@@ -17,6 +17,6 @@
     }
   ],
   "public": true,
-  "buildCommand": "vite build",
+  "buildCommand": "npm install && npm run production",
   "outputDirectory": "public"
 }
