--- a/vercel.json
+++ b/vercel.json
@@ -2,21 +2,29 @@
   "version": 2,
   "framework": null,
   "functions": {
-    "api/index.php": {
-      "runtime": "vercel-php@0.6.2"
-    }
+      "api/index.php": { "runtime": "vercel-php@0.6.2" }
   },
   "routes": [
-    {
-      "src": "/build/(.*)",
-      "dest": "/public/build/"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/api/index.php"
-    }
+      { "src": "/build/(.*)", "dest": "/public/build/" },
+      { "src": "/(.*)", "dest": "/api/index.php" }
   ],
   "public": true,
   "buildCommand": "npm install && npm run production",
-  "outputDirectory": "public"
+  "outputDirectory": "public",
+  "env": {
+      "APP_ENV": "production",
+      "APP_DEBUG": "false",
+      "APP_URL": "https://movieflix.vercel.app",
+      "APP_KEY": "base64:TGaVaXwhWgjn9akhE4SCSIjGG/cQqvICUQ+PgLA3Bs0=",
+      "APP_CONFIG_CACHE": "/tmp/config.php",
+      "APP_EVENTS_CACHE": "/tmp/events.php",
+      "APP_PACKAGES_CACHE": "/tmp/packages.php",
+      "APP_ROUTES_CACHE": "/tmp/routes.php",
+      "APP_SERVICES_CACHE": "/tmp/services.php",
+      "VIEW_COMPILED_PATH": "/tmp",
+      "CACHE_DRIVER": "array",
+      "LOG_CHANNEL": "stderr",
+      "SESSION_DRIVER": "cookie",
+      "OMDB_API_KEY": "6f0e0680"
+  }
 }
